# coon

./: .gitignore  2d_support.patch  2d_support_review.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  ENHANCED_REFERENCES_IMPLEMENTATION.md  ENHANCED_REFERENCES_STATUS.md  LOGGING.md  README.md  graph_refactor.md  issues.md  lsp_spec.html
.github/instructions/: CODEBASE_ANALYSIS.instructions.md  DESIGN.instructions.md  INCOMING_OUTGOING_CALLS_REFACTOR.instructions.md  LSP.instructions.md  app.instructions.md
coon/: Cargo.toml
coon/src/: demo.rs  lib.rs  logging.rs  lsp_loader.rs  main.rs  runner.rs
core_data/: Cargo.toml
core_data/src/: lib.rs
crates/coon/: Cargo.toml
crates/coon/src/: demo.rs  lib.rs  logging.rs  lsp_loader.rs  main.rs  runner.rs
crates/grid/: Cargo.toml
crates/grid/src/: config.rs  dag.rs  edge_router.rs  engine.rs  error.rs  lib.rs  rendering.rs  result.rs  sugiyama.rs  types.rs
crates/grid/tests/: dag_layout_tests.rs
crates/logic/: Cargo.toml
crates/logic/src/: filters.rs  lib.rs  path.rs  query.rs  traversal.rs
crates/lsp/: Cargo.toml  TESTING.md
crates/lsp/src/: call_hierarchy.rs  compile_commands.rs  loader.rs  parsing.rs  types.rs
crates/lsp/src/client/: mod.rs  parsing_impl.rs  requests.rs
crates/lsp/src/service/: document.rs  mod.rs  request.rs  worker.rs
crates/lsp/src/service/response/: call_hierarchy.rs  legacy.rs  mod.rs  references.rs  symbols.rs
crates/lsp/tests/: call_hierarchy_tests.rs  find_references_tests.rs
crates/lsp_integration/: Cargo.toml  TESTING.md
crates/lsp_integration/src/: call_hierarchy.rs  client.rs  lib.rs  parsing.rs  utils.rs
crates/lsp_integration/src/client/: mod.rs
crates/lsp_integration/src/service/: document.rs  request.rs  response.rs  worker.rs
crates/lsp_integration/src/service/response/: call_hierarchy.rs  mod.rs  references.rs
crates/lsp_integration/tests/: call_hierarchy_tests.rs  find_references_tests.rs  hover_tests.rs
crates/model/: Cargo.toml
crates/model/src/: demo.rs  graph.rs  lazy_graph.rs  lib.rs  symbols.rs
crates/tui/: Cargo.toml
crates/tui/src/: actions.rs  call_graph_view.rs  function_list.rs  graph_adapter.rs  graph_view.rs  graph_workspace.rs  key_map.rs  lib.rs  rendering.rs  search_bar.rs  status_message.rs  tui.rs
crates/tui/src/app/: events.rs  lsp.rs  lsp_bridge.rs  mod.rs  update.rs  workspace.rs  workspace_manager.rs
crates/tui_ui/: Cargo.toml
crates/tui_ui/src/: app.rs  lib.rs  rendering.rs
crates/tui_ui/src/app/: lsp.rs  mod.rs  update.rs  workspace.rs
logic/: Cargo.toml
logic/src/: filters.rs  lib.rs  path.rs  query.rs
lsp_integration/: Cargo.toml
lsp_integration/src/: call_hierarchy.rs  call_hierarchy_tests.rs  enhanced_references_tests.rs  hover_tests.rs  lib.rs  service.rs  symbol_resolution.rs  types.rs  utils.rs
lsp_integration/src/service/: document.rs  mod.rs  request.rs  response.rs  worker.rs
model/: Cargo.toml
model/src/: lib.rs  lsp_status.rs
src/: compile_commands.rs  main.rs
test_project/: Makefile  compile_commands.json  main.c  test.c
tui_ui/: Cargo.toml
tui_ui/src/: actions.rs  call_graph_view.rs  diagnostic_panel.rs  function_list.rs  graph_adapter.rs  graph_view.rs  graph_workspace.rs  lib.rs  search_bar.rs  tui.rs
