[workspace]
resolver = "2"
members = [
    "coon",
    "model",
    "lsp_integration",
    "logic",
    "tui_ui"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
fern = "0.6"
chrono = { version = "0.4", features = ["serde"] }
