[workspace]
resolver = "2"
members = [
    "crates/coon",
    "crates/model",
    "crates/lsp",
    "crates/logic",
    "crates/tui"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
fern = "0.6"
chrono = { version = "0.4", features = ["serde"] }
lsp-types = "0.95"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
ratatui = "0.29"
crossterm = "0.28"
pretty_env_logger = "0.5"
tempfile = "3.0"

# Internal crates
model = { path = "crates/model" }
logic = { path = "crates/logic" }
lsp = { path = "crates/lsp" }
tui = { path = "crates/tui" }
