[package]
name = "lsp_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
core_data = { path = "../core_data" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
lsp-types = "0.95"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.5"
tempfile = "3.0"
