[package]
name = "tui_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
core_data = { path = "../core_data" }
logic = { path = "../logic" }
lsp_integration = { path = "../lsp_integration" }
ratatui = "0.28"
crossterm = "0.28"
log = "0.4"
tokio = { version = "1.0", features = ["sync"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lsp-types = "0.95"
