[package]
name = "tui_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
logic = { path = "../logic" }
lsp_integration = { path = "../lsp_integration" }
grid = { path = "../../grid", features = ["rendering"] }
ratatui = "0.29"
crossterm = "0.28"
log = "0.4"
tokio = { version = "1.0", features = ["sync"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lsp-types = "0.95"
