[package]
name = "tui_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
model.workspace = true
logic.workspace = true
lsp_integration.workspace = true
grid = { path = "../../grid", features = ["rendering"] }
ratatui.workspace = true
crossterm.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde_json.workspace = true
uuid.workspace = true
lsp-types.workspace = true
