[package]
name = "coon"
version = "0.1.0"
edition = "2021"

[dependencies]
model.workspace = true
logic.workspace = true
lsp.workspace = true
tui.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
lsp-types.workspace = true
crossterm.workspace = true
ratatui.workspace = true
uuid.workspace = true
