[package]
name = "lsp_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
model.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
lsp-types.workspace = true
log.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_env_logger.workspace = true
tempfile.workspace = true
