[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
model.workspace = true
logic.workspace = true
lsp.workspace = true
grid.workspace = true
ratatui.workspace = true
crossterm.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde_json.workspace = true
uuid.workspace = true
lsp-types.workspace = true
